--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 fastapi
 uvicorn
 streamlit
-opencv-python
 numpy
 torch
 facenet-pytorch
 mtcnn
-retinaface
 mediapipe
 deepface
 python-dotenv
 requests
 together
+torchvision
+tensorflow
+onnxruntime
+scip
+tqdm
+tf-keras
